# InterviewMate

./: README.md  pyproject.toml  replit.md
attached_assets/: Pasted-Build-a-complete-full-stack-web-app-called-InterviewMate-matching-this-specification--1763968770742_1763968770742.txt
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
